# server/routers/auth.ts
@@ -1,8 +1,10 @@
 import { Router } from "express";
-import { signup } from "../controllers/auth";
+import { signup, login } from "../controllers/auth";
 
 const router = Router();
 
-router.post('/signup', signup)
+router.post('/signup', signup);
+
+router.post('/login', login);
 
 export { router as authRouter };
